<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAdds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:contentDescription="@string/todo_add"
        app:layout_constraintBottom_toBottomOf="@+id/floatingActionButtonSubs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/floatingActionButtonSubs"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonSubs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButtonAdds"
        app:layout_constraintTop_toTopOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/arrow_down_float"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="54dp"
        android:layout_height="57dp"
        android:layout_marginStart="115dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/price_default"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/price_default_text"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:text="@string/precio_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameItem" />

    <TextView
        android:id="@+id/textViewNameItem"
        android:layout_width="78dp"
        android:layout_height="24dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/producto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/price_value"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPrice"
        app:layout_constraintStart_toEndOf="@+id/textViewPrice"
        app:layout_constraintTop_toTopOf="@+id/textViewPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>